fix arrows out of screen + theme to class ongoing

--- a/src/main/frontend/themes/my-theme/link-to-resume.css
+++ b/src/main/frontend/themes/my-theme/link-to-resume.css
@@ -1,8 +1,4 @@
-/* Styles for the button-like RouterLink */
-[theme="link-to-resume"] {
-	/* display: inline-flex;
-	align-items: center;
-	justify-content: center; */
+.link-to-resume {
 	padding: 8px 16px;
 	border-radius: var(--lumo-border-radius-m);
 	background-color: var(--lumo-primary-color-10pct);
@@ -16,12 +12,12 @@
 	transition: background-color 0.2s, box-shadow 0.2s;
 }
 
-[theme="link-to-resume"]:hover {
+.link-to-resume:hover {
 	background-color: var(--lumo-primary-color-50pct);
 	text-decoration: none;
 
 }
 
-[theme="link-to-resume"]:active {
+.link-to-resume:active {
 	box-shadow: var(--lumo-box-shadow-s);
 }
